Fixed an alignment issue, prompt before reporting, changed to square buttons (trial)

--- a/css/tellraw.css
+++ b/css/tellraw.css
@@ -114,3 +114,9 @@ div[class*='col-xs-'] {
 .offset-up-button {
 	bottom: 39px;
 }
+
+* {
+  -webkit-border-radius: 0 !important;
+     -moz-border-radius: 0 !important;
+          border-radius: 0 !important;
+}
